@@ -17,7 +17,7 @@
 
 # A module to test Base measure module
 
-use Clone::Fast;
+use Storable qw(dclone);
 use EBox;
 use EBox::Gettext;
 use File::Temp;
@@ -106,7 +106,7 @@ foreach my $printableMethod (qw(printableInstance printableTypeInstance)) {
 
 # Data set, typeInstances, printable ones bad types
 foreach my $attr (qw(dataSources types instances printableLabels printableInstances printableTypeInstances printableDataSources)) {
-    my $badDescription = Clone::Fast::clone($greatDescription);
+    my $badDescription = dclone($greatDescription);
     $badDescription->{$attr} = 'foo';
     throws_ok {
         $measure->_setDescription($badDescription);
@@ -114,7 +114,7 @@ foreach my $attr (qw(dataSources types instances printableLabels printableInstan
 }
 
 # graphPerTypeInstance
-my $badDescription = Clone::Fast::clone($greatDescription);
+my $badDescription = dclone($greatDescription);
 $badDescription->{typeInstances} = [];
 $badDescription->{printableTypeInstances} = [];
 $badDescription->{graphPerTypeInstance} = 1;
@@ -124,7 +124,7 @@ throws_ok {
 
 # Printable instances (data source, type and measures)
 foreach my $kind (qw(printableInstances printableTypeInstances printableDataSources)) {
-    my $badDescription = Clone::Fast::clone($greatDescription);
+    my $badDescription = dclone($greatDescription);
     $badDescription->{$kind} = { 'tmp' => 'foo',
                                  'bar' => 'baz' };
     throws_ok {
@@ -133,7 +133,7 @@ foreach my $kind (qw(printableInstances printableTypeInstances printableDataSour
 }
 
 # Printable label
-$badDescription = Clone::Fast::clone($greatDescription);
+$badDescription = dclone($greatDescription);
 $badDescription->{printableLabels} = [ 'foo', 'bar' ];
 throws_ok {
     $measure->_setDescription($badDescription);
@@ -148,7 +148,7 @@ foreach my $type (qw(int percentage degree byte)) {
     cmp_ok( $measure->{type}, 'eq', $type);
 }
 
-$badDescription = Clone::Fast::clone($greatDescription);
+$badDescription = dclone($greatDescription);
 $badDescription->{type} = 'foo';
 throws_ok {
     $measure->_setDescription($badDescription);
