@@ -10,7 +10,7 @@ Architecture: all
 Replaces: ebox-trafficshaping (<< 2.0.100)
 Pre-Depends: zentyal-core
 Depends: zentyal-core (>= 4.0), zentyal-core (<< 4.1), zentyal-firewall,
-         libtree-perl, libclone-fast-perl, ${misc:Depends}
+         libtree-perl, ${misc:Depends}
 Description: Zentyal - Traffic Shaping
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
