@@ -1,3 +1,5 @@
+HEAD
+	+ Replaced deprecated Clone::Fast with Storage's dclone
 4.1
 	+ Set version to 4.1
 4.0
